--- a/activity_write.html
+++ b/activity_write.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class = "mb-3">
                         <label class = "from-label">내용</label>
-                        <div class = "summernote" name = "contents" type = "text"></div>
+                        <textarea class = "summernote" name = "contents" type = "text"></textarea>
                     </div>
                     <button type = "submit" class = "btn btn-primary">글쓰기</button>
                 </form>
