--- a/activity_login.html
+++ b/activity_login.html
@@ -50,14 +50,25 @@
                     require_once __DIR__ . '/db.php';
                     define('db', true);
 
-                    $department = '<script>document.write(log_);</script>';
-                    echo $department;
-                    if($department != null)
+                    // $department = '<script>document.write(log_);</script>';
+                    // echo $department;
+                    // if($department != null)
+                    // {
+                    //     
+                    //     
+                    // }
+                    
+                    $sql_1 = "SELECT * FROM assem_activity WHERE department = '웹 개발';";
+                    $result_1 = mysqli_query($db, $sql_1);
+                    $row_1 = mysqli_num_rows($result_1);
+
+                    while($board = mysqli_fetch_array($result_1))
                     {
-                        $sql_1 = "SELECT * FROM assem_activity WHERE department = '$department';";
-                        $result_1 = mysqli_query($db, $sql_1);
-                        $row_1 = mysqli_num_rows($result_1);
-                    }
+                        $contents = $board["contents"];
+                        if(strlen($contents) > 30)
+                        {
+                            $contents = str_replace($board["contents"], mb_substr($board["contents"], 0, 30, "utf-8")."...", $board["contents"]);
+                        }
                 ?>
                 <div class = "info_card container">
                     <div class = "row row-cols-1 row-cols-sm-3 row-cols-md-3 g-3">
@@ -65,12 +76,12 @@
                             <div class = "card card_">
                                 <img src = "https://src.hidoc.co.kr/image/lib/2022/5/12/1652337370806_0.jpg">
                                 <div class = "card-body">
-                                    <p class = "card-title">Card title</p>
-                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
+                                    <p class = "card-title"><?php echo $board["title"] ?></p>
+                                    <p class = "card-text"><?php echo $board["contents"] ?></p>
                                 </div>
                             </div>
                         </div>
-                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
+                        <!-- <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
                             <div class = "card card_">
                                 <img src = "https://post-phinf.pstatic.net/MjAyMDAyMjlfMjY4/MDAxNTgyOTU0Nzg3MjQ4.PBMFV4WrSJmeSUJ56c4C7Vkz_SsQlJ1SByKU18kkJh0g.T7mQnadCWVtEZ448AGk_9kG1HFBAzdztXZcBjvSbduwg.JPEG/%EA%B3%A0%EC%96%91%EC%9D%B4_%EB%82%98%EC%9D%B41.jpg?type=w1200">
                                 <div class = "card-body cb_">
@@ -114,9 +125,15 @@
                                     <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
+
+                <?php  
+                        $a++;
+                    }
+                ?>
+                
                 <div class = "write_">
                     <button type = "button" class = "write_btn btn btn-primary" onClick = "location.href = './activity_write.html'">
                         글쓰기
@@ -146,7 +163,7 @@
                 <div class = "select_item tab" id = "all">All</div>
                 <div class = "select_item tab" id = "web">웹 개발</div>
                 <div class = "select_item tab" id = "app">앱 개발</div>
-                <div class = "select_item tab" id = "rm">머신러닝</div>
+                <div class = "select_item tab" id = "ml">머신러닝</div>
                 <div class = "select_item tab" id = "CTF">CTF</div>
                 <div class = "select_item tab" id = "fore">포렌식</div>
                 <div class = "select_item tab" id = "hak">웹 해킹</div>
