--- a/activity_login.html
+++ b/activity_login.html
@@ -61,17 +61,18 @@
                     $sql_1 = "SELECT * FROM assem_activity WHERE department = '웹 개발';";
                     $result_1 = mysqli_query($db, $sql_1);
                     $row_1 = mysqli_num_rows($result_1);
-
-                    while($board = mysqli_fetch_array($result_1))
+                ?>
+                <div class = "info_card container">
+                    <div class = "row row-cols-1 row-cols-sm-3 row-cols-md-3 g-3">
+                        
+                    <?php while($board = mysqli_fetch_array($result_1))
                     {
                         $contents = $board["contents"];
                         if(strlen($contents) > 30)
                         {
                             $contents = str_replace($board["contents"], mb_substr($board["contents"], 0, 30, "utf-8")."...", $board["contents"]);
                         }
-                ?>
-                <div class = "info_card container">
-                    <div class = "row row-cols-1 row-cols-sm-3 row-cols-md-3 g-3">
+                    ?>
                         <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
                             <div class = "card card_">
                                 <img src = "https://src.hidoc.co.kr/image/lib/2022/5/12/1652337370806_0.jpg">
@@ -81,58 +82,10 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
-                            <div class = "card card_">
-                                <img src = "https://post-phinf.pstatic.net/MjAyMDAyMjlfMjY4/MDAxNTgyOTU0Nzg3MjQ4.PBMFV4WrSJmeSUJ56c4C7Vkz_SsQlJ1SByKU18kkJh0g.T7mQnadCWVtEZ448AGk_9kG1HFBAzdztXZcBjvSbduwg.JPEG/%EA%B3%A0%EC%96%91%EC%9D%B4_%EB%82%98%EC%9D%B41.jpg?type=w1200">
-                                <div class = "card-body cb_">
-                                    <p class = "card-title">Card title</p>
-                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
-                            <div class = "card card_">
-                                <img src = "https://src.hidoc.co.kr/image/lib/2022/5/4/1651651323632_0.jpg">
-                                <div class = "card-body">
-                                    <p class = "card-title">Card title</p>
-                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
-                            <div class = "card card_">
-                                <img src = "http://www.chemicalnews.co.kr/news/photo/202106/3636_10174_4958.jpg">
-                                <div class = "card-body">
-                                    <p class = "card-title">Card title</p>
-                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
-                            <div class = "card card_">
-                                <img src = "https://ichef.bbci.co.uk/news/800/cpsprodpb/E172/production/_126241775_getty_cats.png.webp">
-                                <div class = "card-body">
-                                    <p class = "card-title">Card title</p>
-                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
-                            <div class = "card card_">
-                                <img src = "https://images.mypetlife.co.kr/content/uploads/2022/05/27120923/52041878798_acf34e8861_b.jpg">
-                                <div class = "card-body">
-                                    <p class = "card-title">Card title</p>
-                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
-                                </div>
-                            </div>
-                        </div> -->
+                <?php } ?>
                     </div>
                 </div>
 
-                <?php  
-                        $a++;
-                    }
-                ?>
                 
                 <div class = "write_">
                     <button type = "button" class = "write_btn btn btn-primary" onClick = "location.href = './activity_write.html'">
