--- a/activity_login.html
+++ b/activity_login.html
@@ -58,7 +58,7 @@
                     //     
                     // }
                     
-                    $sql_1 = "SELECT * FROM assem_activity WHERE department = '웹 개발';";
+                    $sql_1 = "SELECT * FROM assem_activity WHERE department = 'CTF';";
                     $result_1 = mysqli_query($db, $sql_1);
                     $row_1 = mysqli_num_rows($result_1);
                 ?>
